<resources>
    <string name="app_name">BirdDashboard</string>
    <string name="title_activity_menu_slide">MenuSlideActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="title_duck">Chuck</string>
    <string name="description_duck">Es un gran estratega y siempre está buscando formas de resolver los problemas sin violencia.</string>

    <string name="title_silver">Silver</string>
    <string name="description_silver">Es un gran estratega y siempre está buscando formas de resolver los problemas sin violencia.</string>
</resources>